<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drc_vision_action_server</name>
  <version>0.0.0</version>
  <description>ros2 action server for DRC Hubo Vision Sensor</description>
  <maintainer email="akdba0207@gmail.com">Dongbin Kim</maintainer>
  <license>Apache License 2.0</license>
  <author email="smile.giho@gmail.com">Giho Jang</author>
  <author email="akdba0207@gmail.com">Dongbin Kim</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
