<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<buildtool_depend>rosidl_default_generators</buildtool_depend>
<depend>action_msgs</depend>
<member_of_group>rosidl_interface_packages</member_of_group>



<name>dasl_interface</name>
<version>0.0.0</version>
<description>ros2 action, message and service interfaces</description>
<maintainer email="akdba0207@gmail.com">Dongbin Kim</maintainer>
<license>Apache License 2.0</license>
<author email="smile.giho@gmail.com">Giho Jang</author>
<author email="akdba0207@gmail.com">Dongbin Kim</author>

<buildtool_depend>ament_cmake</buildtool_depend>

<test_depend>ament_lint_auto</test_depend>
<test_depend>ament_lint_common</test_depend>

<export>
  <build_type>ament_cmake</build_type>
</export>
</package>